[TASK] Added Partial for Extension Conifg SVGs

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -99,40 +99,20 @@
                     <div class="cf-extension-setting">
                         <strong>Plugin Enabled in Frontend:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.disable_plugin} === '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:variable name="pluginEnabled" value="{f:if(condition: '{constantsConfiguration.disable_plugin}', then: '', else: '1')}" />
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: pluginEnabled}" />
                             </span>
                     </div>
                     <div class="cf-extension-setting">
                         <strong>Consent tracking enabled:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.tracking_enabled} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.tracking_enabled}" />
                             </span>
                     </div>
                     <div class="cf-extension-setting">
                         <strong>Block unregistered iframes and Scripts:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.script_blocking} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.script_blocking}" />
                             </span>
                     </div>
 
@@ -140,40 +120,19 @@
                     <div class="cf-extension-setting">
                         <strong>Cookiebanner hidden from Bots:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.hide_from_bots} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.hide_from_bots}" />
                             </span>
                     </div>
                     <div class="cf-extension-setting">
                         <strong>Run consent modal on page load:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.autorun_consent} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.autorun_consent}" />
                             </span>
                     </div>
                     <div class="cf-extension-setting">
                         <strong>Block page navigation until user consent modal action:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.force_consent} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.force_consent}" />
                             </span>
                     </div>
 
@@ -187,14 +146,7 @@
                     <div class="cf-extension-setting">
                         <strong>Thumbnail API for Iframemanager:</strong>
                         <span class="setting-value">
-                                <f:if condition="{constantsConfiguration.thumbnail_api_enabled} !== '1'">
-                                    <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-                                    </f:then>
-                                    <f:else>
-                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                                    </f:else>
-                                </f:if>
+                                <f:render partial="Icon/StatusToggle" arguments="{enabled: constantsConfiguration.thumbnail_api_enabled}" />
                             </span>
                     </div>
 
