--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -216,7 +216,7 @@
                                                         <core:icon identifier="actions-check-badge-alt" size="small"/>
                                                     </div>
                                                     <div class="cf-feature-cell cf-feature-no-api text-center">
-                                                        Max 10. Pages
+                                                        Max 10. Pages <br> (only Pre-Consent check, no configuration suggestions)
                                                     </div>
                                                 </div>
 
@@ -224,7 +224,7 @@
                                                 <div class="cf-feature-row">
                                                     <div class="cf-feature-cell cf-feature-name">
                                                         <p class="fw-bold m-0">Shared Local Config</p>
-                                                        <span class="feature-description">Share your locale cookie & service config with our Cookie-Scanner to classify "unknown" services from your Typo3 Backend to the Scanner</span>
+                                                        <span class="feature-description">To classify services that appear as 'unknown' in your Scan Preview, submit your local cookie and service configuration to the Cookie Scanner.</span>
                                                     </div>
                                                     <div class="cf-feature-cell cf-feature-api text-center">
                                                         <core:icon identifier="actions-check-badge-alt" size="small"/>
@@ -244,7 +244,7 @@
                                                         <core:icon identifier="actions-check-badge-alt" size="small"/>
                                                     </div>
                                                     <div class="cf-feature-cell cf-feature-no-api text-center">
-                                                        soon only for API users.
+                                                        soon only for API user, limited rate-limit for non-API users
                                                     </div>
                                                 </div>
                                             </div>
